"update-arch-doc"

--- a/docs/01-总体架构设计.md
+++ b/docs/01-总体架构设计.md
@@ -1,167 +1,361 @@
-# Spring Boot 4 企业级应用 - 总体架构设计
+# Platform 企业级平台架构设计 - 总体架构
 
 ## 1. 项目概述
 
 ### 1.1 项目目标
-构建一个高性能、高可用、可扩展的 Spring Boot 4 企业级应用系统。
+构建一个**平台化、多租户、微服务架构**的企业级基础平台，支持快速构建多个业务应用。
 
-### 1.2 技术栈选型
-- **核心框架**: Spring Boot 4.x
+### 1.2 核心特性
+- **平台化设计**: 基础组件统一管理，业务应用快速构建
+- **多租户架构**: 支持多业务线独立部署和数据隔离
+- **配置中心**: GitLab 集成 + 配置加密
+- **状态监控**: 对外公开页面 + 对内管理页面（需登录）
+- **水平扩展**: 支持服务动态扩缩容
+- **定时任务**: 统一调度管理
+
+### 1.3 技术栈选型
+- **核心框架**: Spring Boot 4.0
 - **Java 版本**: Java 21 LTS
-- **构建工具**: Maven 3.9+
-- **数据库**: PostgreSQL 16 (主库) + Redis 7 (缓存)
-- **消息队列**: Apache Kafka 3.x
-- **服务注册**: Spring Cloud Consul
+- **构建工具**: Maven 3.9+ (依赖管理)
+- **数据库**: MySQL 5.7
+- **缓存**: Redis 7
+- **配置中心**: Spring Cloud Config + GitLab + Jasypt (加密)
+- **服务注册**: Nacos / Consul
 - **API 网关**: Spring Cloud Gateway
-- **监控**: Prometheus + Grafana
-- **日志**: ELK Stack (Elasticsearch + Logstash + Kibana)
+- **定时任务**: XXL-Job / Elastic-Job
+- **监控**: Prometheus + Grafana + Spring Boot Actuator
+- **日志**: ELK Stack
 
-## 2. 系统架构
+## 2. 平台架构
 
-### 2.1 分层架构
+### 2.1 四层架构设计
 ```
-┌─────────────────────────────────────┐
-│      前端层 (React/Vue)              │
-└─────────────────────────────────────┘
-              ↓
-┌─────────────────────────────────────┐
-│      API 网关层 (Gateway)            │
-└─────────────────────────────────────┘
-              ↓
-┌─────────────────────────────────────┐
-│      业务服务层 (Microservices)      │
-│  ┌──────┐  ┌──────┐  ┌──────┐      │
-│  │用户  │  │订单  │  │支付  │      │
-│  │服务  │  │服务  │  │服务  │      │
-│  └──────┘  └──────┘  └──────┘      │
-└─────────────────────────────────────┘
-              ↓
-┌─────────────────────────────────────┐
-│      数据层 (Database + Cache)       │
-└─────────────────────────────────────┘
+┌─────────────────────────────────────────────────────────┐
+│                   业务应用层                              │
+│  ┌──────────────┐  ┌──────────────┐  ┌──────────────┐  │
+│  │ platform-app1│  │ platform-app2│  │ platform-app3│  │
+│  │  (业务系统1)  │  │  (业务系统2)  │  │  (业务系统3)  │  │
+│  └──────────────┘  └──────────────┘  └──────────────┘  │
+└─────────────────────────────────────────────────────────┘
+                          ↓
+┌─────────────────────────────────────────────────────────┐
+│                   平台服务层                              │
+│  ┌──────────┐  ┌──────────┐  ┌──────────┐  ┌────────┐ │
+│  │platform- │  │platform- │  │platform- │  │platform│ │
+│  │gateway   │  │admin     │  │scheduler │  │status  │ │
+│  │(API网关) │  │(管理平台)│  │(定时任务)│  │(状态页)│ │
+│  └──────────┘  └──────────┘  └──────────┘  └────────┘ │
+└─────────────────────────────────────────────────────────┘
+                          ↓
+┌─────────────────────────────────────────────────────────┐
+│                   基础设施层                              │
+│  ┌──────────┐  ┌──────────┐  ┌──────────┐  ┌────────┐ │
+│  │platform- │  │platform- │  │platform- │  │platform│ │
+│  │config    │  │registry  │  │common    │  │parent  │ │
+│  │(配置中心)│  │(服务注册)│  │(公共组件)│  │(依赖管理)│ │
+│  └──────────┘  └──────────┘  └──────────┘  └────────┘ │
+└─────────────────────────────────────────────────────────┘
+                          ↓
+┌─────────────────────────────────────────────────────────┐
+│                   数据存储层                              │
+│  ┌──────────┐  ┌──────────┐  ┌──────────┐              │
+│  │ MySQL 5.7│  │ Redis 7  │  │  GitLab  │              │
+│  │ (主数据) │  │  (缓存)  │  │(配置仓库)│              │
+│  └──────────┘  └──────────┘  └──────────┘              │
+└─────────────────────────────────────────────────────────┘
 ```
 
 ### 2.2 核心模块划分
-1. **用户服务** (user-service)
-   - 用户注册/登录
-   - 权限管理
-   - 用户信息管理
 
-2. **订单服务** (order-service)
-   - 订单创建
-   - 订单查询
-   - 订单状态管理
+#### 基础设施层 (Infrastructure)
+1. **platform-parent** - Maven 父 POM，统一依赖管理
+2. **platform-config** - 配置中心 (GitLab + Jasypt 加密)
+3. **platform-registry** - 服务注册与发现
+4. **platform-common** - 公共组件库
+   - platform-common-core (核心工具)
+   - platform-common-web (Web 组件)
+   - platform-common-security (安全组件)
+   - platform-common-redis (Redis 组件)
+   - platform-common-mysql (MySQL 组件)
 
-3. **支付服务** (payment-service)
-   - 支付处理
-   - 退款处理
-   - 支付回调
+#### 平台服务层 (Platform Services)
+1. **platform-gateway** - API 网关
+   - 路由转发
+   - 认证鉴权
+   - 限流熔断
+   - 日志追踪
 
-4. **通知服务** (notification-service)
-   - 邮件通知
-   - 短信通知
-   - 站内消息
+2. **platform-admin** - 管理平台 (需登录)
+   - 服务管理
+   - 配置管理
+   - 用户权限管理
+   - 系统监控
 
-## 3. 技术架构特性
+3. **platform-scheduler** - 定时任务调度中心
+   - 统一任务管理
+   - 任务调度
+   - 执行日志
+   - 失败重试
 
-### 3.1 高可用设计
-- 服务多实例部署
-- 数据库主从复制
-- Redis 哨兵模式
-- 熔断降级机制
+4. **platform-status** - 状态页面
+   - platform-status-public (对外，无需登录)
+   - platform-status-internal (对内，需登录)
 
-### 3.2 高性能设计
-- Redis 多级缓存
-- 数据库连接池优化
-- 异步消息处理
-- CDN 静态资源加速
+#### 业务应用层 (Business Applications)
+- **platform-app-xxx** - 业务应用模板
+  - 快速依赖 platform-common 组件
+  - 自动集成配置中心
+  - 自动服务注册
+  - 开箱即用
 
-### 3.3 安全设计
-- JWT Token 认证
-- OAuth2.0 授权
-- HTTPS 加密传输
-- SQL 注入防护
-- XSS 攻击防护
+## 3. 配置中心设计
 
-### 3.4 可扩展设计
-- 微服务架构
-- 消息驱动架构
-- 插件化设计
-- 配置中心统一管理
-
-## 4. 项目结构
-
-```
-gi013/
-├── docs/                    # 设计文档
-├── gateway/                 # API 网关
-├── services/               # 业务服务
-│   ├── user-service/       # 用户服务
-│   ├── order-service/      # 订单服务
-│   ├── payment-service/    # 支付服务
-│   └── notification-service/ # 通知服务
-├── common/                 # 公共模块
-│   ├── common-core/        # 核心工具类
-│   ├── common-security/    # 安全模块
-│   └── common-redis/       # Redis 模块
-├── infrastructure/         # 基础设施
-│   ├── config-server/      # 配置中心
-│   └── registry/           # 服务注册
-└── docker/                 # Docker 配置
+### 3.1 GitLab 集成方案
+```yaml
+spring:
+  cloud:
+    config:
+      server:
+        git:
+          uri: https://gitlab.company.com/config-repo.git
+          username: ${GITLAB_USERNAME}
+          password: ${GITLAB_TOKEN}
+          default-label: main
+          search-paths:
+            - '{application}'
+            - 'common'
 ```
 
-## 5. 开发规范
+### 3.2 配置加密 (Jasypt)
+```yaml
+# 加密配置示例
+spring:
+  datasource:
+    password: ENC(encrypted_password_here)
 
-### 5.1 代码规范
-- 遵循阿里巴巴 Java 开发手册
-- 使用 Checkstyle 代码检查
-- 统一代码格式化规则
+jasypt:
+  encryptor:
+    password: ${JASYPT_ENCRYPTOR_PASSWORD}
+    algorithm: PBEWITHHMACSHA512ANDAES_256
+```
 
-### 5.2 Git 规范
-- 分支管理: main/develop/feature/hotfix
-- Commit 规范: feat/fix/docs/style/refactor
+### 3.3 配置文件结构
+```
+config-repo/
+├── common/
+│   ├── application.yml           # 公共配置
+│   ├── application-dev.yml       # 开发环境
+│   ├── application-test.yml      # 测试环境
+│   └── application-prod.yml      # 生产环境
+├── platform-gateway/
+│   └── platform-gateway.yml
+├── platform-admin/
+│   └── platform-admin.yml
+└── platform-app-xxx/
+    └── platform-app-xxx.yml
+```
 
-### 5.3 接口规范
-- RESTful API 设计
-- 统一响应格式
-- 统一异常处理
+## 4. 状态页面设计
 
-## 6. 部署架构
+### 4.1 对外状态页 (platform-status-public)
+- **访问方式**: 无需登录，公开访问
+- **展示内容**:
+  - 系统整体状态 (正常/异常)
+  - 各服务可用性
+  - 历史事件记录
+  - 计划维护通知
+- **技术实现**: Spring Boot Actuator + 自定义 Health Indicator
 
-### 6.1 容器化部署
+### 4.2 对内状态页 (platform-status-internal)
+- **访问方式**: 需要登录认证
+- **展示内容**:
+  - 详细服务监控指标
+  - JVM 内存/CPU/线程
+  - 数据库连接池状态
+  - Redis 缓存命中率
+  - 接口调用统计
+  - 实时日志查看
+- **技术实现**: Spring Boot Admin + Prometheus + Grafana
+
+## 5. 项目结构
+
+```
+platform/
+├── platform-parent/                    # Maven 父 POM
+│   └── pom.xml                        # 统一依赖管理
+│
+├── platform-common/                    # 公共组件
+│   ├── platform-common-core/          # 核心工具
+│   ├── platform-common-web/           # Web 组件
+│   ├── platform-common-security/      # 安全组件
+│   ├── platform-common-redis/         # Redis 组件
+│   └── platform-common-mysql/         # MySQL 组件
+│
+├── platform-infrastructure/            # 基础设施
+│   ├── platform-config/               # 配置中心
+│   └── platform-registry/             # 服务注册
+│
+├── platform-services/                  # 平台服务
+│   ├── platform-gateway/              # API 网关
+│   ├── platform-admin/                # 管理平台
+│   ├── platform-scheduler/            # 定时任务
+│   └── platform-status/               # 状态页面
+│       ├── platform-status-public/    # 对外状态页
+│       └── platform-status-internal/  # 对内状态页
+│
+├── platform-applications/              # 业务应用
+│   ├── platform-app-demo/             # 示例应用
+│   └── platform-app-template/         # 应用模板
+│
+├── docs/                              # 设计文档
+├── docker/                            # Docker 配置
+└── scripts/                           # 部署脚本
+```
+
+## 6. 水平扩展设计
+
+### 6.1 服务扩展
+- **无状态设计**: 所有服务无状态，支持任意扩展
+- **负载均衡**: Nginx/Spring Cloud LoadBalancer
+- **服务注册**: 自动注册/注销，动态感知
+- **配置刷新**: 支持配置热更新，无需重启
+
+### 6.2 数据库扩展
+- **读写分离**: MySQL 主从架构
+- **分库分表**: ShardingSphere
+- **连接池**: HikariCP 优化
+
+### 6.3 缓存扩展
+- **Redis 集群**: 支持水平扩展
+- **多级缓存**: 本地缓存 + Redis
+- **缓存预热**: 启动时自动加载热点数据
+
+## 7. 定时任务统一管理
+
+### 7.1 XXL-Job 集成
+```yaml
+xxl:
+  job:
+    admin:
+      addresses: http://platform-scheduler:8080/xxl-job-admin
+    executor:
+      appname: ${spring.application.name}
+      port: 9999
+```
+
+### 7.2 任务管理特性
+- **统一调度**: 所有定时任务集中管理
+- **可视化配置**: Web 界面配置任务
+- **失败重试**: 自动重试机制
+- **执行日志**: 完整的执行记录
+- **动态调整**: 运行时修改 Cron 表达式
+
+## 8. 业务应用快速构建
+
+### 8.1 应用模板 (platform-app-template)
+```xml
+<parent>
+    <groupId>com.company.platform</groupId>
+    <artifactId>platform-parent</artifactId>
+    <version>1.0.0</version>
+</parent>
+
+<dependencies>
+    <!-- 一键引入所有基础组件 -->
+    <dependency>
+        <groupId>com.company.platform</groupId>
+        <artifactId>platform-common-web</artifactId>
+    </dependency>
+</dependencies>
+```
+
+### 8.2 开箱即用特性
+- ✅ 自动集成配置中心
+- ✅ 自动服务注册
+- ✅ 统一异常处理
+- ✅ 统一日志格式
+- ✅ 统一响应格式
+- ✅ Redis 缓存支持
+- ✅ MySQL 数据源配置
+- ✅ 安全认证集成
+- ✅ 定时任务支持
+
+## 9. 开发规范
+
+### 9.1 命名规范
+- **项目命名**: platform-{module}
+- **包命名**: com.company.platform.{module}
+- **类命名**: 驼峰命名，见名知意
+- **接口命名**: RESTful 风格
+
+### 9.2 Git 规范
+- **分支管理**: main/develop/feature/hotfix
+- **Commit 规范**:
+  - feat: 新功能
+  - fix: 修复
+  - docs: 文档
+  - refactor: 重构
+
+### 9.3 接口规范
+```json
+{
+  "code": 200,
+  "message": "success",
+  "data": {},
+  "timestamp": 1705132800000
+}
+```
+
+## 10. 部署架构
+
+### 10.1 容器化部署
 - Docker 容器化
 - Kubernetes 编排
 - Helm Charts 管理
 
-### 6.2 CI/CD 流程
-- GitLab CI/CD
-- 自动化测试
-- 自动化部署
+### 10.2 CI/CD 流程
+```
+GitLab Push → CI Pipeline → Build → Test → Deploy
+```
 
-## 7. 监控与运维
+## 11. 监控与运维
 
-### 7.1 监控体系
-- 应用监控: Spring Boot Actuator
-- 指标监控: Prometheus
-- 日志监控: ELK Stack
-- 链路追踪: Zipkin
+### 11.1 监控体系
+- **应用监控**: Spring Boot Actuator
+- **指标监控**: Prometheus + Grafana
+- **日志监控**: ELK Stack
+- **链路追踪**: SkyWalking
 
-### 7.2 告警机制
+### 11.2 告警机制
 - 服务异常告警
 - 性能指标告警
 - 业务指标告警
 
-## 8. 后续文档规划
+## 12. 后续文档规划
 
 1. ✅ **总体架构设计** (当前文档)
-2. ⏳ **数据库设计文档**
-3. ⏳ **API 接口设计文档**
-4. ⏳ **安全架构设计文档**
-5. ⏳ **部署运维设计文档**
+2. ⏳ **基础设施层详细设计**
+   - platform-parent 依赖管理
+   - platform-config 配置中心
+   - platform-common 公共组件
+3. ⏳ **平台服务层详细设计**
+   - platform-gateway 网关设计
+   - platform-admin 管理平台
+   - platform-scheduler 定时任务
+   - platform-status 状态页面
+4. ⏳ **数据库架构设计**
+   - MySQL 表结构设计
+   - 分库分表方案
+5. ⏳ **安全架构设计**
+   - 认证授权方案
+   - 配置加密方案
+6. ⏳ **部署运维设计**
+   - Docker 部署
+   - Kubernetes 部署
 
 ---
 
-**文档版本**: v1.0
+**文档版本**: v2.0
 **创建日期**: 2026-01-13
-**作者**: Z Code AI
+**作者**: Z Code AI (GLM-4.7)
 **状态**: 待审核
